WOL-66 FIX BUGS AND MERGE

--- a/BankKodemia/BankKodemia.xcodeproj/xcshareddata/xcschemes/BankKodemia.xcscheme
+++ b/BankKodemia/BankKodemia.xcodeproj/xcshareddata/xcschemes/BankKodemia.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "E73FFB7027FDEE48004E46CB"
+               BuildableName = "BankKodemiaTests.xctest"
+               BlueprintName = "BankKodemiaTests"
+               ReferencedContainer = "container:BankKodemia.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
